--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   "homepage": "https://github.com/l2labs/oases-contracts#readme",
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "4.4.2",
-    "ethereumjs-util": "^7.1.4",
+    "ethereumjs-util": "^7.1.4"
+  },
+  "devDependencies": {
+    "@openzeppelin/truffle-upgrades": "^1.14.0",
     "truffle-assertions": "^0.9.2"
   }
 }
