--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "4.4.2",
     "@openzeppelin/truffle-upgrades": "^1.14.0",
+    "@qtumproject/hdwallet-provider": "^2.0.9",
     "@truffle/hdwallet-provider": "^2.0.4",
     "ethereumjs-util": "^7.1.4"
   },
